/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.mycompany.eva2_5_interfaces;

/**
 *
 * @author jesus
 */
public interface Datos {
    //solo metodos abstractos 
    public void mostrarDatos();
}
